--- a/Blazor-Dashboard/Shared/MainLayout.cshtml
+++ b/Blazor-Dashboard/Shared/MainLayout.cshtml
@@ -8,41 +8,54 @@
 
     <div class="top-row">
         <nav class="navbar navbar-expand-sm navbar-light bg-light d-flex justify-content-end" style=" height: 3.5rem; border-bottom: 1px solid #d6d5d5;">
-                <a class="navbar-brand abs" href="#">Navbar 1</a>
-                <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapsingNavbar">
-                    <span class="navbar-toggler-icon"></span>
-                </button>
-                <div class="navbar-collapse collapse" id="collapsingNavbar">
-                    <ul class="navbar-nav">
-                        <li class="nav-item dropdown">
-                            <a class="nav-link dropdown-toggle" href="#" data-toggle="dropdown" aria-haspopup="true"><span class="oi oi-task" aria-hidden="true"></span> Actions</a>
-                            <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-                                <a class="dropdown-item" href="#">Report</a>
-                                <a class="dropdown-item" href="#">Resend</a>
-                                <a class="dropdown-item" href="#">Upgrade</a>
-                            </div>
-                        </li>
-                        <li class="nav-item dropdown">
-                            <a class="nav-link dropdown-toggle" href="#" data-toggle="dropdown" aria-haspopup="true"><span class="oi oi-wrench" aria-hidden="true"></span> Issues</a>
-                            <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-                                <a class="dropdown-item" href="#">Installation Issues</a>
-                                <a class="dropdown-item" href="#">Bugs</a>
-                                <a class="dropdown-item" href="#">Operations</a>
-                            </div>
-                        </li>
-                        <li class="nav-item dropdown">
-                            <a class="nav-link dropdown-toggle" href="#" data-toggle="dropdown" aria-haspopup="true"><span class="oi oi-briefcase" aria-hidden="true"></span> Reports</a>
-                            <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-                                <a class="dropdown-item" href="#">Sales Report</a>
-                                <a class="dropdown-item" href="#">Profit Report</a>
-                                <a class="dropdown-item" href="#">Region</a>
-                            </div>
-                        </li>
-                    </ul>
-                    <div class="ml-auto" style="vertical-align:middle"><img src="images/person3.png" width="40" height="40" class="rounded-circle"></div>
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapsingNavbar">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="navbar-collapse collapse" id="collapsingNavbar">
+                <ul class="navbar-nav">
+                    <li class="nav-item dropdown">
+                        <a class="nav-link dropdown-toggle" href="#" data-toggle="dropdown" aria-haspopup="true"><span class="oi oi-pencil" aria-hidden="true"></span> Actions</a>
+                        <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
+                            <a class="dropdown-item" href="#">Report</a>
+                            <a class="dropdown-item" href="#">Resend</a>
+                            <a class="dropdown-item" href="#">Upgrade</a>
+                        </div>
+                    </li>
+                    <li class="nav-item dropdown">
+                        <a class="nav-link dropdown-toggle" href="#" data-toggle="dropdown" aria-haspopup="true"><span class="oi oi-clipboard" aria-hidden="true"></span> Issues</a>
+                        <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
+                            <a class="dropdown-item" href="#">Installation Issues</a>
+                            <a class="dropdown-item" href="#">Bugs</a>
+                            <a class="dropdown-item" href="#">Operations</a>
+                        </div>
+                    </li>
+                    <li class="nav-item dropdown">
+                        <a class="nav-link dropdown-toggle" href="#" data-toggle="dropdown" aria-haspopup="true"><span class="oi oi-file" aria-hidden="true"></span> Reports</a>
+                        <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
+                            <a class="dropdown-item" href="#">Sales Report</a>
+                            <a class="dropdown-item" href="#">Profit Report</a>
+                            <a class="dropdown-item" href="#">Region</a>
+                        </div>
+                    </li>
+                </ul>
+                <ul class="navbar-nav ml-auto">
+                    <li class="nav-item">
+                        <a class="nav-link" href="#"><span class="oi oi-bell" aria-hidden="true" style="vertical-align: middle;margin-top:8px"></span></a>
+                    </li>
+                    <!--
+            https://github.com/hjnilsson/country-flags
+            -->
+                    <li class="nav-item">
+                        <a class="nav-link" href="#"><div class="ml-auto" style="vertical-align:middle;margin-top:2px"><img src="images/us.png" width="25" height="25" class="rounded-circle"></div></a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#"><div class="ml-auto" style="vertical-align:middle"><img src="images/person3.png" width="35" height="35" class="rounded-circle"></div></a>
+                    </li>
 
-                </div>
-    
+                </ul>
+
+            </div>
+
         </nav>
 
     </div>
