--- a/Blazor-Dashboard/wwwroot/css/site.css
+++ b/Blazor-Dashboard/wwwroot/css/site.css
@@ -9,11 +9,18 @@ app {
     display: flex;
     flex-direction: column;
 }
-
+/*
 .top-row {
     height: 3.5rem;
     display: flex;
     align-items: center;
+
+}
+
+*/
+.top-row {
+    height: 3.5rem;
+
 }
 
 .main {
@@ -21,8 +28,9 @@ app {
 }
 
     .main .top-row {
-        background-color: white;
+        background-color: #F8F9FB;
         border-bottom: 1px solid #d6d5d5;
+        z-index:100;
     }
 
 /*
@@ -53,20 +61,20 @@ app {
         top: -2px;
     }
 
-.nav-item {
+.nav-itemb {
     font-size: 0.9rem;
     padding-bottom: 0.5rem;
 }
 
-    .nav-item:first-of-type {
+    .nav-itemb:first-of-type {
         padding-top: 1rem;
     }
 
-    .nav-item:last-of-type {
+    .nav-itemb:last-of-type {
         padding-bottom: 1rem;
     }
 
-    .nav-item a {
+    .nav-itemb a {
         color: #d7d7d7;
         border-radius: 4px;
         height: 3rem;
@@ -75,15 +83,17 @@ app {
         line-height: 3rem;
     }
 
-        .nav-item a.active {
+        .nav-itemb a.active {
             background-color: rgba(255,255,255,0.25);
             color: white;
         }
 
-        .nav-item a:hover {
+        .nav-itemb a:hover {
             background-color: rgba(255,255,255,0.1);
             color: white;
         }
+
+    
 
 .content {
     padding-top: 1.1rem;
@@ -95,6 +105,9 @@ app {
 
 @media (max-width: 767.98px) {
     .main .top-row {
+        display: none;
+    }
+    .main .top-row navbar{
         display: none;
     }
 }
