Slide In Side Bar

--- a/Blazor-Dashboard/Pages/Index.cshtml
+++ b/Blazor-Dashboard/Pages/Index.cshtml
@@ -2,6 +2,7 @@
 @using DoughnutChartComponent;
 
 @page "/"
+@page "/dashboard1"
 
 
 <div class="jumbotron">
@@ -100,15 +101,15 @@
             <img class="card-img-top img-fluid" alt="Card image cap" src="images/floral-pattern-background-569.jpg">
             <div class="card-body">
                 <h4 class="card-title">New Features</h4>
-                <p class="card-text" style="font-weight:300">Lorem Ipsum is simply dummy text of the printing and typesetting industry scrambled it to make text of the printing and typesetting industry scrambled a type specimen book text of the dummy text of the printing printing and typesetting industry scrambled dummy text of the printing. </p>
+                <p class="card-text" style="font-weight:300">Resize the browser to the size of a mobile phone to test the Responsive Slide In SideBar.</p>
             </div>
         </div>
         <!-- card -->
         <div class="card">
             <img class="card-img-top img-fluid" alt="Card image cap" src="images/wallpaper-110.jpg">
             <div class="card-body">
-                <h4 class="card-title">Support Cases</h4>
-                <p class="card-text" style="font-weight:300">Lorem Ipsum is simply dummy text of the printing and typesetting industry scrambled it to make text of the printing and typesetting industry scrambled a type specimen book text of the dummy text of the printing printing and typesetting industry scrambled dummy text of the printing. </p>
+                <h4 class="card-title">Todo</h4>
+                <p class="card-text" style="font-weight:300">Todo: 1. Improve the Javascript-Blazor Integration. 2. Simplify the Top Bar toggling. 3. Investigate SVG Pie Chart and Line Chart. 4. Test in other browsers besides Microsoft Edge.</p>
             </div>
         </div>
         <!-- card -->
