--- a/Blazor-Dashboard/Shared/MainLayout.cshtml
+++ b/Blazor-Dashboard/Shared/MainLayout.cshtml
@@ -1,19 +1,78 @@
 @inherits BlazorLayoutComponent
 
-<div class="sidebar">
-    <NavMenu />
-</div>
+ <div id="sidebar-main-container" class="sidebar-main-container">
 
-<div class="main">
+     <div class="sidebar">
+         <nav id="nav-menu" class="sidebar-nav">
+             <div class="top-row pl-4 navbar navbar-dark">
+                 <a class="navbar-brand" href="">BLAZOR DASHBOARD</a>
+             </div>
+             <div class="">
+                 <ul class="nav flex-column">
+                     <li class="nav-item-side px-3">
+                         <NavLink class="nav-link" href="" Match=NavLinkMatch.All>
+                             <span class="oi oi-home" aria-hidden="true"></span> Home
+                         </NavLink>
+                     </li>
+                     <li class="nav-item-side px-3">
+                         <NavLink class="nav-link" href="counter">
+                             <span class="oi oi-plus" aria-hidden="true"></span> Counter
+                         </NavLink>
+                     </li>
+                     <li class="nav-item-side px-3">
+                         <NavLink class="nav-link" href="fetchdata">
+                             <span class="oi oi-list-rich" aria-hidden="true"></span> Fetch data
+                         </NavLink>
+                     </li>
+                 </ul>
+             </div>
+         </nav>
 
-    <div class="top-row">
-        <nav class="navbar navbar-expand-sm navbar-light bg-light d-flex justify-content-end" style=" height: 3.5rem; border-bottom: 1px solid #d6d5d5;">
+         <nav>
+             <div class="top-row pl-4 navbar navbar-dark">
+                 <a class="navbar-brand" href="">BLAZOR DASHBOARD</a>
+                 <div>
+                     <button class="navbar-toggler" onclick=@LaunchSideBar>
+                         <span class="navbar-toggler-icon"></span>
+                     </button>
+                     <button class="navbar-toggler" style="padding-top:2.2px" onclick=@ToggleNavMenu>
+                         <span class="oi oi-excerpt" aria-hidden="true" style="font-size:1.10em;width:1.3em;height:1.45em;padding-top:7px;font-weight:200"></span>
+                     </button>
+                 </div>
+             </div>
+             <div class=@(collapseSideMenu ? "collapse" : "") onclick=@ToggleSideMenu>
+                 <ul class="nav flex-column">
+                     <li class="nav-item-side px-3">
+                         <NavLink class="nav-link" href="" Match=NavLinkMatch.All>
+                             <span class="oi oi-home" aria-hidden="true"></span> Home
+                         </NavLink>
+                     </li>
+                     <li class="nav-item-side px-3">
+                         <NavLink class="nav-link" href="counter">
+                             <span class="oi oi-plus" aria-hidden="true"></span> Counter
+                         </NavLink>
+                     </li>
+                     <li class="nav-item-side px-3">
+                         <NavLink class="nav-link" href="fetchdata">
+                             <span class="oi oi-list-rich" aria-hidden="true"></span> Fetch data
+                         </NavLink>
+                     </li>
+
+                 </ul>
+             </div>
+         </nav>
+
+     </div>
+
+<div class="main sidebar-cover">
+    <div class=@(BlazorDashboard.XSingleton.NavBarDisplay ? "top-row" : "top-row-blank")>
+        <nav id="nav-menu" class="navbar navbar-expand navbar-light bg-light">
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapsingNavbar">
                 <span class="navbar-toggler-icon"></span>
             </button>
             <div class="navbar-collapse collapse" id="collapsingNavbar">
                 <ul class="navbar-nav">
-                    <li class="nav-item dropdown">
+                    <li class="nav-item dropdown action">
                         <a class="nav-link dropdown-toggle" href="#" data-toggle="dropdown" aria-haspopup="true"><span class="oi oi-pencil" aria-hidden="true"></span> Actions</a>
                         <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
                             <a class="dropdown-item" href="#">Report</a>
@@ -21,15 +80,17 @@
                             <a class="dropdown-item" href="#">Upgrade</a>
                         </div>
                     </li>
-                    <li class="nav-item dropdown">
-                        <a class="nav-link dropdown-toggle" href="#" data-toggle="dropdown" aria-haspopup="true"><span class="oi oi-clipboard" aria-hidden="true"></span> Issues</a>
-                        <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-                            <a class="dropdown-item" href="#">Installation Issues</a>
-                            <a class="dropdown-item" href="#">Bugs</a>
-                            <a class="dropdown-item" href="#">Operations</a>
-                        </div>
+                    <!--
+                    <li class="nav-item dropdown action">
+                    <a class="nav-link dropdown-toggle" href="#" data-toggle="dropdown" aria-haspopup="true"><span class="oi oi-clipboard" aria-hidden="true"></span> Issues</a>
+                    <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
+                        <a class="dropdown-item" href="#">Installation Issues</a>
+                        <a class="dropdown-item" href="#">Bugs</a>
+                        <a class="dropdown-item" href="#">Operations</a>
+                    </div>
                     </li>
-                    <li class="nav-item dropdown">
+                    -->
+                    <li class="nav-item dropdown action">
                         <a class="nav-link dropdown-toggle" href="#" data-toggle="dropdown" aria-haspopup="true"><span class="oi oi-file" aria-hidden="true"></span> Reports</a>
                         <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
                             <a class="dropdown-item" href="#">Sales Report</a>
@@ -38,21 +99,25 @@
                         </div>
                     </li>
                 </ul>
+
+                <!--
+                https://github.com/hjnilsson/country-flags
+                -->
+
+
                 <ul class="navbar-nav ml-auto">
                     <li class="nav-item">
-                        <a class="nav-link" href="#"><span class="oi oi-bell" aria-hidden="true" style="vertical-align: middle;margin-top:8px"></span></a>
-                    </li>
-                    <!--
-            https://github.com/hjnilsson/country-flags
-            -->
-                    <li class="nav-item">
-                        <a class="nav-link" href="#"><div class="ml-auto" style="vertical-align:middle;margin-top:2px"><img src="images/us.png" width="25" height="25" class="rounded-circle"></div></a>
+                        <a class="nav-link bell" href="#"><span class="oi oi-bell" aria-hidden="true"></span></a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#"><div class="ml-auto" style="vertical-align:middle"><img src="images/person3.png" width="35" height="35" class="rounded-circle"></div></a>
+                        <a class="nav-link flag" href="#"><div class="ml-auto"><img src="images/us.png" width="25" height="25" class="rounded-circle"></div></a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link user" href="#"><div class="ml-auto"><img src="images/person3.png" width="35" height="35" class="rounded-circle"></div></a>
                     </li>
 
                 </ul>
+
 
             </div>
 
@@ -63,5 +128,34 @@
     <div class="content px-4">
         @Body
     </div>
+</div>
 
 </div>
+
+
+
+
+@functions {
+    bool collapseSideMenu = true;
+
+    void ToggleSideMenu()
+    {
+        collapseSideMenu = !collapseSideMenu;
+    }
+
+    //bool collapseNavMenu = true;
+
+    void ToggleNavMenu()
+    {
+        //collapseNavMenu = !collapseNavMenu;
+        System.Diagnostics.Debug.WriteLine("ToogleNavMenu");
+        BlazorDashboard.XSingleton.NavBarDisplay = !BlazorDashboard.XSingleton.NavBarDisplay;
+        StateHasChanged();
+    }
+
+    public async static Task LaunchSideBar()
+    {
+        await JSRuntime.Current.InvokeAsync<bool>("LaunchSideBar");
+    }
+
+}
