--- a/Blazor-Dashboard/wwwroot/css/site.css
+++ b/Blazor-Dashboard/wwwroot/css/site.css
@@ -8,6 +8,9 @@ app {
     position: relative;
     display: flex;
     flex-direction: column;
+    /*
+    height: 100%;
+    */
 }
 /*
 .top-row {
@@ -22,6 +25,9 @@ app {
     height: 3.5rem;
 
 }
+.top-row-blank {
+    height: 3.5rem;
+}
 
 .main {
     flex: 1;
@@ -31,6 +37,61 @@ app {
         background-color: #F8F9FB;
         border-bottom: 1px solid #d6d5d5;
         z-index:100;
+        display:block;
+    }
+
+    .main .top-row-blank {
+        background-color: #F8F9FB;
+        border-bottom: 1px solid #d6d5d5;
+        z-index: 100;
+        display: none;
+    }
+
+    .main .top-row-blank .navbar {
+        height: 3.5rem;
+        border-bottom: 1px solid #d6d5d5;
+    }
+
+        .main .top-row .navbar {
+            height: 3.5rem;
+            border-bottom: 1px solid #d6d5d5;
+        }
+
+
+            .main .top-row .navbar .navbar-collapse .navbar-nav .action {
+                vertical-align: middle;
+            }
+
+            .main .top-row .navbar .navbar-collapse .navbar-nav .nav-item .bell {
+                vertical-align: middle;
+                margin-top: 8px
+            }
+
+            .main .top-row .navbar .navbar-nav .nav-item .flag {
+                vertical-align: middle;
+                margin-top: 2px
+            }
+
+            .main .top-row .navbar .navbar-nav .nav-item .user {
+                vertical-align: middle
+            }
+
+            .main .top-row-blank .navbar .navbar-collapse .navbar-nav .action {
+                vertical-align: middle;
+            }
+
+    .main .top-row-blank .navbar .navbar-collapse .navbar-nav .nav-item .bell {
+        vertical-align: middle;
+        margin-top: 8px
+    }
+
+    .main .top-row-blank .navbar .navbar-nav .nav-item .flag {
+        vertical-align: middle;
+        margin-top: 2px
+    }
+
+    .main .top-row-blank .navbar .navbar-nav .nav-item .user {
+        vertical-align: middle
     }
 
 /*
@@ -43,6 +104,17 @@ app {
 }
     */
 .sidebar {
+    /* original dont have this
+    position: absolute;
+    top: 0;
+    left: 0;
+    z-index: 100;
+    visibility: visible;
+    width: 300px;
+    height: 100%;
+    background: #000000;
+    transition: all 0.5s;
+    */
     background-image: linear-gradient(180deg, rgb(44, 46, 61) 0%, rgb(44, 46, 61) 70%);
 }
 
@@ -61,20 +133,20 @@ app {
         top: -2px;
     }
 
-.nav-itemb {
+.nav-item-side {
     font-size: 0.9rem;
     padding-bottom: 0.5rem;
 }
 
-    .nav-itemb:first-of-type {
+    .nav-item-side:first-of-type {
         padding-top: 1rem;
     }
 
-    .nav-itemb:last-of-type {
+    .nav-item-side:last-of-type {
         padding-bottom: 1rem;
     }
 
-    .nav-itemb a {
+    .nav-item-side a {
         color: #d7d7d7;
         border-radius: 4px;
         height: 3rem;
@@ -83,12 +155,12 @@ app {
         line-height: 3rem;
     }
 
-        .nav-itemb a.active {
+        .nav-item-side a.active {
             background-color: rgba(255,255,255,0.25);
             color: white;
         }
 
-        .nav-itemb a:hover {
+        .nav-item-side a:hover {
             background-color: rgba(255,255,255,0.1);
             color: white;
         }
@@ -135,31 +207,45 @@ app {
 
 
 */
-@media (max-width: 767.98px) {
-    .main .top-row {
+@media (max-width: 991.98px) {
+
+    .main .top-row-blank {
         display: none;
     }
-    .main .top-row navbar{
-        display: none;
-    }
+
 }
 
-@media (min-width: 768px) {
+@media (min-width: 992px) {
+
+    /*this one aint matter coz side bar container emulate this behavior
     app {
         flex-direction: row;
     }
 
+    */
+
+    .main .top-row-blank {
+        position: sticky;
+        top: 0;
+        display: block;
+    }
+    /*originally got this.
+
     .sidebar {
+        background: black;
         width: 250px;
-        height: 100vh;
+        height:300vh;
         position: sticky;
         top: 0;
     }
+    */
 
     .main .top-row {
         position: sticky;
         top: 0;
     }
+
+
 
     .main > div {
         padding-left: 2rem !important;
@@ -170,8 +256,12 @@ app {
         display: none;
     }
 
+    
     .sidebar .collapse {
-        /* Never collapse the sidebar for wide screens */
         display: block;
     }
+
+
+
+
 }
