Bug fixes on slide in Side Bar

--- a/Blazor-Dashboard/Shared/MainLayout.cshtml
+++ b/Blazor-Dashboard/Shared/MainLayout.cshtml
@@ -7,14 +7,14 @@
 </div>
 <div id="sidebar-main-container" class="sidebar-main-container">
     <!--
-
+        style="background:#e9ecef;"
     <div class="slidesidebar">
         <NavMenu SlideIn="true" CollapseSideMenu="false" />
     </div>
         -->
 
-    <nav id="nav-menu" class="sidebar-nav ind">
-        <div class="top-row pl-4 navbar navbar-dark">
+    <nav id="nav-menu" class="sidebar-nav ind" style="margin-top:-6px">
+        <div class="top-row pl-4 navbar navbar-dark" >
             <a class="navbar-brand" href="">BLAZOR DASHBOARD</a>
         </div>
         <div class="">
